# ai-studio-course

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  rag_workshop.ipynb
benchmark_results/: rag_comparison_responses.json  results.json
data/transcripts/: -S51FOnqF0o.en.json3  -S51FOnqF0o.txt  71A8PN-z1rI.en.json3  71A8PN-z1rI.txt  BEav6MIjmyk.en.json3  BEav6MIjmyk.txt  SSSffQsbFo4.en.json3  SSSffQsbFo4.txt  index.json  jlcO19XyQ1I.en.json3  jlcO19XyQ1I.txt  qtCBLC5zRNU.en.json3  qtCBLC5zRNU.txt  tYw5TW1T5zo.en.json3  tYw5TW1T5zo.txt  wLb9pWQHIbA.en.json3  wLb9pWQHIbA.txt
data/trees/: -S51FOnqF0o.json  71A8PN-z1rI.json  BEav6MIjmyk.json  SSSffQsbFo4.json  _manifest.json  fall23.json  fall24.json  fall25.json  index.json  jlcO19XyQ1I.json  qtCBLC5zRNU.json  spring24.json  spring25.json  spring26.json  tYw5TW1T5zo.json  wLb9pWQHIbA.json
scripts/: build_trees.py  generate_charts.py  generate_response_chart.py  md_tree_parser.py  rag_compare.py
tests/: conftest.py  shared.py  test_eval.py  test_notebook.py  test_pageindex.py
