[project]
name = "ai-studio-rag-workshop"
version = "0.1.0"
description = "RAG Workshop for MIT AI Studio Course (MAS.664/665, EC.731, IDS.865)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlite-vec>=0.1.1",
    "fastembed>=0.4.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "ipywidgets>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "nbformat>=5.0.0",
]
