[project]
name = "ai-studio-rag-workshop"
version = "0.1.0"
description = "RAG Workshop for MIT AI Studio Course (MAS.664/665, EC.731, IDS.865)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlite-vec>=0.1.1",
    "fastembed>=0.4.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "ipywidgets>=8.0.0",
    "ipykernel>=6.0.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.2.4",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "nbformat>=5.0.0",
    "nbmake>=1.5.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",   # line too long — notebooks have wide cells
    "F401",   # unused imports — cells run incrementally
    "E402",   # module-level import not at top — notebook structure
]

[tool.pytest.ini_options]
addopts = "--tb=short"
